--- a/site/myHerupa/myHerupa.css
+++ b/site/myHerupa/myHerupa.css
@@ -10,13 +10,13 @@ body{
      background-repeat: no-repeat;
      background-position: center;
      background-size: cover;
-     
+
 }
 #left{
   text-align: left;
 }
 .divHeader h1{
-  font-size : 500%;
+  font-size : 8rem;
   margin-top : 10%;
 
 }
@@ -96,7 +96,7 @@ body{
   font-size: 120%;
 }
 #new h1 {
-  font-size: 400%;
+  font-size: 6rem;
 }
 #secondrow{
   text-align: center;
